chore: simplification